@@ -1780,9 +1780,10 @@ int Game::GenRules(const AString &rules, const AString &css,
 		temp += "or food ";
 	temp += "to your units for maintenance, as a last resort.";
 	f.Paragraph(temp);
+	temp = "";
 	if(Globals->MULTIPLIER_USE == GameDefs::MULT_NONE) {
-		temp = AString("This fee is generally ") + Globals->MAINTENANCE_COST +
-			" silver for a normal character";
+		temp += AString("This fee is generally ") +
+			Globals->MAINTENANCE_COST + " silver for a normal character";
 		if (Globals->LEADERS_EXIST) {
 			temp += AString(", and ") + Globals->LEADER_COST +
 				" silver for a leader";
@@ -1798,7 +1799,7 @@ int Game::GenRules(const AString &rules, const AString &css,
 		}
 		temp += "pay a fee based on the number of skill levels the character "
 			"has.  This fee is $";
-		temp += Globals->MAINTENANCE_MULTIPLIER + " per skill level";
+		temp += AString(Globals->MAINTENANCE_MULTIPLIER) + " per skill level";
 		if(Globals->MULTIPLIER_USE != GameDefs::MULT_ALL) {
 			temp += ". All other characters pay a fee of ";
 			temp += Globals->MAINTENANCE_COST;
@@ -2100,10 +2101,10 @@ int Game::GenRules(const AString &rules, const AString &css,
 			"no other practical uses.  However, the profit margins on "
 			"these items are usually quite high. ";
 		if(Globals->FACTION_LIMIT_TYPE == GameDefs::FACLIM_FACTION_TYPES) {
-			temp += "Buying and selling of these items in a region counts "
-				"against a Trade faction's quota of regions in which it "
-				"may undertake trade activity (note that buying and selling "
-				"normal items does not).";
+			temp += "Buying of trade items in a region counts against a "
+				"Trade faction's quota of regions in which it may "
+				"undertake trade activity (note that buying and selling "
+				"normal items does not, nor does selling of Trade items).";
 		}
 		f.Paragraph(temp);
 	}
